# TestBot

./: Cargo.toml
src/: main.rs
src/commands/: ping.rs
