[package]
name = "testbot"
version = "0.1.0"
authors = ["kingbri <bdashore3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros", "time"] }
tracing-subscriber = "0.2.12"

[dependencies.serenity]
version = "0.9.0-rc.1"
default-features = true
features = ["collector", "rustls_backend"]
